# calculus-of-variations

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Boltz.py  BoltzDash.py  BoltzUnittests.py  CalculusOfVariation.docx  CalculusOfVariation.vsdx  Dockerfile  HigherDerivatives.py  HigherDerivativesDash.py  HigherDerivativesUnittests  Isoperimetric.py  IsoperimetricDash.py  IsoperimetricUnittests.py  Makefile  Multidimensional.py  MultidimensionalDash.py  README.md  SPCV.py  SPCVDash.py  SPCVUnittests.py  USE_CASE.vsdx  abstract_problem.py  examples.sh  main.sh  presentation.pptx  requirements.txt  setup.cfg  simplest_problem.py  test_all.sh  Последовательности UML.vsdx
.github/workflows/: codecov.yml  lint.yml  (+2 more)
calculus_of_variations/: __init__.py  abstract_problem.py  boltz_problem.py  higher_derivatives_problem.py  isoperimetric_problem.py  multidimensional_problem.py  simplest_problem.py  utils.py
dash/: boltz_problem_dash.py  higher_derivatives_problem_dash.py  isoperimetric_problem_dash.py  multidimensional_problem_dash.py  simplest_problem_dash.py  utils.py
tests/: boltz_problem_tests.py  higher_derivatives_problem_tests.py  isoperimetric_problem_test.py  multidimensional_problem_tests.py  simplest_problem_tests.py  test_boltz_problem.py  test_higher_derivatives_problem.py  test_isoperimetric_problem.py  test_multidimensional_problem.py  test_simplest_problem.py
web_interface/: boltz_problem_dash.py  higher_derivatives_problem_dash.py  isoperimetric_problem_dash.py  multidimensional_problem_dash.py  simplest_problem_dash.py  utils.py
(+7 files in other folders)
