[metadata]
name = calculus-of-variations
version = 0.3.0
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = Project on solving the Calculus of variations problems using symbolic mathematics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/calculus-of-variations
project_urls =
    Bug Tracker = https://github.com/dayyass/calculus-of-variations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    sympy == 1.6.2

[options.packages.find]
where = src
